--- a/finances/templates/finances/dashboard.html
+++ b/finances/templates/finances/dashboard.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
-
 {% block content %}
 
+Total Value of Materials Inventory: {{totalInventoryValue.cost__sum}}<br>
+Total Value of Finished Goods Inventory:
 
 <h1>Dashboard</h1>
 <hr style='background-color:#000000;border-width:0;color:#000000;height:1px;line-height:0;text-align:left;width:100%;'/>
+
 <div class="account">
 	<h2>Assets</h2>
 	<hr style='background-color:#000000;border-width:0;color:#000000;height:1px;line-height:0;text-align:left;width:100%;'/>
