adding view and template for materials inventory manage

--- a/finances/templates/finances/index.html
+++ b/finances/templates/finances/index.html
@@ -3,5 +3,10 @@
 <p>Welcome to Hearts A Swirl.  
 <br>
 Choose an option from the menu at the left.
+<br>
+<br>
+Manage Materials Inventory<br>
+Manage Finished Goods Inventory<br>
+
 </p>
 {% endblock %}
